--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <link rel="stylesheet" href="/css/application.css" type="text/css" media="screen" charset="utf-8">
+  <title>Live Fortunes</title>
 </head>
 <body>
   <div id="container">
