add remain time

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="container">
     <pre id="fortune"></pre>
-    <p id="hint">Hint: Server will push new one automatically in about 1 min.  <a class="push button">Push now</a> and give everyone else a surpise! </p><a class="refresh button">Not Interesting. &nbsp;Change one Please.</a>
+    <p id="hint">Hint: Server will push new one automatically every 2 mins. &nbsp;(<span id="time_left">?</span> sec left)  <a class="push button">Push now</a> and give everyone else a surpise! </p><a class="refresh button">Not Interesting. &nbsp;Change one Please.</a>
   </div>
   <script type="text/javascript" src="/faye.js"></script>
   <script type="text/javascript" src="/js/jquery.js"></script>
